Fix codegen for rule service.
